[package]
name = "rp_list_contacts"
version = "0.1.0"
authors = ["RackPing"]
edition = "2018"

[[bin]]
name = "main"
path = "rp_list_contacts.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "=0.2.0-alpha.6", features = ["io", "tcp", "timer"] }
serde_json = "1.0.44"
