[package]
name = "rp_schedule_maint"
version = "0.1.0"
authors = ["RackPing"]
edition = "2018"

[[bin]]
name = "rp_schedule_maint"
path = "src/rp_schedule_maint.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "=0.2.0-alpha.6", features = ["io", "tcp", "timer"] }
serde_json = "1.0.44"
