[package]
name = "rp_update_contact"
version = "0.1.0"
authors = ["RackPing"]
edition = "2018"

[[bin]]
name = "rp_update_contact"
path = "src/rp_update_contact.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "=0.2.0-alpha.6", features = ["io", "tcp", "timer"] }
serde_json = "1.0.44"
